# RayTracer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check_file.yml
include/: AABB.hpp  ArgsManager.hpp  BVHNode.hpp  Box3D.hpp  CustomException.hpp  FixCrossInclude.hpp  Interval.hpp  RaytracerCore.hpp  Utils.hpp
include/Raytracer/: Camera.hpp  Ray.hpp  (+3 more)
pluginsSrc/: CMakeLists.txt
pluginsSrc/Box3D/: CMakeLists.txt
pluginsSrc/Box3D/include/: Box3D.hpp
pluginsSrc/Box3D/src/: Box3D.cpp
pluginsSrc/Cone/: CMakeLists.txt  Makefile  cmake_install.cmake
pluginsSrc/Cone/include/: Cone.hpp
pluginsSrc/Cone/src/: Cone.cpp
pluginsSrc/CustomShapes/: CMakeLists.txt
pluginsSrc/CustomShapes/include/: CustomShape.hpp
pluginsSrc/CustomShapes/src/: CustomShape.cpp
pluginsSrc/Cylinder/: CMakeLists.txt  Makefile
pluginsSrc/Cylinder/include/: Cylinder.hpp
pluginsSrc/Cylinder/src/: Cylinder.cpp
pluginsSrc/Dielectric/: CMakeLists.txt
pluginsSrc/Dielectric/include/: Dielectric.hpp
pluginsSrc/Dielectric/src/: Dielectric.cpp
pluginsSrc/DiffuseLight/: CMakeLists.txt
pluginsSrc/DiffuseLight/include/: DiffuseLight.hpp
pluginsSrc/DiffuseLight/src/: DiffuseLight.cpp
pluginsSrc/DirectionalLight/: CMakeLists.txt
pluginsSrc/DirectionalLight/include/: DirectionalLight.hpp
pluginsSrc/DirectionalLight/src/: DirectionalLight.cpp
pluginsSrc/Lambertarian/: CMakeLists.txt
pluginsSrc/Lambertarian/include/: Lambertian.hpp
pluginsSrc/Lambertarian/src/: Lambertian.cpp
pluginsSrc/Lambertian/include/: Lambertian.hpp
pluginsSrc/Lambertian/src/: Lambertian.cpp
pluginsSrc/Metal/: CMakeLists.txt
pluginsSrc/Metal/include/: Metal.hpp
pluginsSrc/Metal/src/: Metal.cpp
pluginsSrc/Plane/: CMakeLists.txt
pluginsSrc/Plane/include/: Plane.hpp
pluginsSrc/Plane/src/: Plane.cpp
pluginsSrc/Quad/: CMakeLists.txt  Makefile  cmake_install.cmake
pluginsSrc/Quad/include/: Box3D.hpp  Quad.hpp
pluginsSrc/Quad/src/: Box3D.cpp  Quad.cpp
pluginsSrc/Sphere/: CMakeLists.txt
pluginsSrc/Sphere/include/: Sphere.hpp
pluginsSrc/Sphere/src/: Sphere.cpp
pluginsSrc/Triangle/: CMakeLists.txt
pluginsSrc/Triangle/include/: Triangle.hpp
pluginsSrc/Triangle/src/: Triangle.cpp
src/: ArgsManager.cpp  main.cpp
(+41 files in other folders)
